--- a/css/main.css
+++ b/css/main.css
@@ -169,18 +169,35 @@ html,h1,h2,h3,h4,h5,h6,a{
 
 /*blog style*/
 
-.blog{
+.CV{
 	margin: 4em 0;
 	position: relative;	
 }
-.blog h1{
+.CV h1{
 	color:#30363d;
-	margin: 2em;	
+	margin-top: 1em;
+	margin-bottom: 10px;
 }
-.blog .card{
-	box-shadow: 0 0 20px #ccc;
+
+.CV p{
+    margin-bottom: 5px;
 }
-.blog .card img{
+
+.CV p2{
+    margin-bottom: 5px;
+}
+
+.CV h5{
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
+.CV h4{
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.CV .card img{
 	width: 100%;
 	height: 12em;
 }
@@ -189,11 +206,10 @@ html,h1,h2,h3,h4,h5,h6,a{
  	width: 100%;
  }	
 }
-.blog .card-title{
-	color:#F97300;
-	 
+.CV	color:#F97300;
+
 }
-.blog .card-body{
+.CV .card-body{
 	padding: 1em;
 }
 .team{
@@ -203,11 +219,11 @@ html,h1,h2,h3,h4,h5,h6,a{
 }
 .team h1{
 	color:#30363d;
-	margin: 2em;	
+	margin: 2em;
 }
 .team .item{
 	position: relative;
-	overflow: hidden;	
+	overflow: hidden;
 }
 .team .des{
 	background: #F97300;
@@ -232,12 +248,12 @@ html,h1,h2,h3,h4,h5,h6,a{
 }
 .contact-form{
 	margin: 6em 0;
-	position: relative;		
+	position: relative;
 }
 
 .contact-form h1{
 	padding:2em 1px;
-	color: #F97300; 
+	color: #F97300;
 }
 .contact-form .right{
 	max-width: 600px;
@@ -250,4 +266,16 @@ html,h1,h2,h3,h4,h5,h6,a{
 .contact-form .right .form-control::placeholder{
 	color: #888;
 	font-size: 16px;
+}
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
